--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,7 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=0_gnu
-  - _tflow_select=2.3.0=mkl
+  - _tflow_select=2.1.0=gpu
   - absl-py=0.9.0=py38h32f6830_1
   - astunparse=1.6.3=py_0
   - attrs=19.3.0=py_0
@@ -17,14 +17,20 @@ dependencies:
   - blinker=1.4=py_1
   - brotlipy=0.7.0=py38h1e0a361_1000
   - c-ares=1.15.0=h516909a_1001
-  - ca-certificates=2020.1.1=0
+  - ca-certificates=2020.4.5.2=hecda079_0
   - cachetools=4.1.0=py_1
-  - certifi=2020.4.5.1=py38_0
+  - certifi=2020.4.5.2=py38h32f6830_0
   - cffi=1.14.0=py38hd463f26_0
   - chardet=3.0.4=py38h32f6830_1006
   - click=7.1.2=pyh9f0ad1d_0
+  - cloudpickle=1.4.1=py_0
   - cryptography=2.9.2=py38h766eaa4_0
+  - cudatoolkit=10.1.243=h6bb024c_0
+  - cudnn=7.6.5=cuda10.1_0
+  - cupti=10.1.168=0
   - cycler=0.10.0=py_2
+  - cytoolz=0.10.1=py38h516909a_0
+  - dask-core=2.18.0=py_0
   - dbus=1.13.6=he372182_0
   - decorator=4.4.2=py_0
   - defusedxml=0.6.0=py_0
@@ -48,6 +54,8 @@ dependencies:
   - hdf5=1.10.5=nompi_h3c11f04_1104
   - icu=64.2=he1b5a44_1
   - idna=2.9=py_1
+  - imagecodecs-lite=2019.12.3=py38h8790de6_1
+  - imageio=2.8.0=py_0
   - importlib-metadata=1.6.0=py38h32f6830_0
   - importlib_metadata=1.6.0=0
   - ipykernel=5.3.0=py38h23f93f0_0
@@ -63,6 +71,7 @@ dependencies:
   - keras=2.3.1=0
   - keras-applications=1.0.8=py_1
   - keras-base=2.3.1=py38_0
+  - keras-gpu=2.3.1=0
   - keras-preprocessing=1.1.0=py_0
   - kiwisolver=1.2.0=py38hbf85e49_0
   - ld_impl_linux-64=2.34=h53a641e_2
@@ -95,13 +104,14 @@ dependencies:
   - nbconvert=5.6.1=py38h32f6830_1
   - nbformat=5.0.6=py_0
   - ncurses=6.1=hf484d3e_1002
+  - networkx=2.4=py_1
   - notebook=6.0.3=py38h32f6830_0
   - nspr=4.25=he1b5a44_0
   - nss=3.47=he751ad9_0
   - numpy=1.18.5=py38h8854b6b_0
   - oauthlib=3.0.1=py_0
   - olefile=0.46=py_0
-  - openssl=1.1.1g=h7b6447c_0
+  - openssl=1.1.1g=h516909a_0
   - opt_einsum=3.2.1=py_0
   - packaging=20.4=pyh9f0ad1d_0
   - pandas=1.0.3=py38h0573a6f_0
@@ -121,6 +131,7 @@ dependencies:
   - pyasn1=0.4.8=py_0
   - pyasn1-modules=0.2.7=py_0
   - pycparser=2.20=py_0
+  - pydicom=2.0.0=pyh9f0ad1d_0
   - pygments=2.6.1=py_0
   - pyjwt=1.7.1=py_0
   - pyopenssl=19.1.0=py_1
@@ -132,6 +143,7 @@ dependencies:
   - python-dateutil=2.8.1=py_0
   - python_abi=3.8=1_cp38
   - pytz=2020.1=py_0
+  - pywavelets=1.1.1=py38h8790de6_1
   - pyyaml=5.3.1=py38h1e0a361_0
   - pyzmq=19.0.1=py38ha71036d_0
   - qt=5.12.5=hd8c4c69_1
@@ -139,6 +151,7 @@ dependencies:
   - requests=2.23.0=pyh8c360ce_2
   - requests-oauthlib=1.2.0=py_0
   - rsa=4.0=py_0
+  - scikit-image=0.17.2=py38hcb8c335_0
   - scikit-learn=0.22.1=py38h22eb022_0
   - scipy=1.4.1=py38h18bccfc_3
   - send2trash=1.5.0=py_0
@@ -148,13 +161,16 @@ dependencies:
   - sysroot_linux-64=2.12=h3a0023d_3
   - tensorboard=2.2.1=pyh532a8cf_0
   - tensorboard-plugin-wit=1.6.0=py_0
-  - tensorflow=2.2.0=mkl_py38h6d3daf0_0
-  - tensorflow-base=2.2.0=mkl_py38h5059a2d_0
+  - tensorflow=2.2.0=gpu_py38hb782248_0
+  - tensorflow-base=2.2.0=gpu_py38h83e3d50_0
   - tensorflow-estimator=2.2.0=pyh208ff02_0
+  - tensorflow-gpu=2.2.0=h0d30ee6_0
   - termcolor=1.1.0=py_2
   - terminado=0.8.3=py38h32f6830_1
   - testpath=0.4.4=py_0
+  - tifffile=2020.6.3=py_0
   - tk=8.6.10=hed695b0_0
+  - toolz=0.10.0=py_0
   - tornado=6.0.4=py38h1e0a361_1
   - traitlets=4.3.3=py38h32f6830_1
   - urllib3=1.25.9=py_0
