--- a/environment.yml
+++ b/environment.yml
@@ -17,9 +17,10 @@ dependencies:
   - blinker=1.4=py_1
   - brotlipy=0.7.0=py38h1e0a361_1000
   - c-ares=1.15.0=h516909a_1001
-  - ca-certificates=2020.4.5.2=hecda079_0
+  - ca-certificates=2020.1.1=0
   - cachetools=4.1.0=py_1
-  - certifi=2020.4.5.2=py38h32f6830_0
+  - cairo=1.14.12=h8948797_3
+  - certifi=2020.4.5.1=py38_0
   - cffi=1.14.0=py38hd463f26_0
   - chardet=3.0.4=py38h32f6830_1006
   - click=7.1.2=pyh9f0ad1d_0
@@ -31,13 +32,14 @@ dependencies:
   - cycler=0.10.0=py_2
   - cytoolz=0.10.1=py38h516909a_0
   - dask-core=2.18.0=py_0
-  - dbus=1.13.6=he372182_0
+  - dbus=1.13.14=hb2f20db_0
   - decorator=4.4.2=py_0
   - defusedxml=0.6.0=py_0
   - entrypoints=0.3=py38h32f6830_1001
   - expat=2.2.9=he1b5a44_2
-  - fontconfig=2.13.1=h86ecdb6_1001
+  - fontconfig=2.13.0=h9420a91_0
   - freetype=2.10.2=he06d7ca_0
+  - fribidi=1.0.5=h7b6447c_0
   - gast=0.3.3=py_0
   - gcc_impl_linux-64=7.5.0=hd420e75_6
   - gettext=0.19.8.1=hc5be6a0_1002
@@ -46,13 +48,16 @@ dependencies:
   - google-auth=1.16.0=pyh9f0ad1d_0
   - google-auth-oauthlib=0.4.1=py_2
   - google-pasta=0.2.0=pyh8c360ce_0
+  - graphite2=1.3.13=h23475e2_0
+  - graphviz=2.40.1=h21bd128_2
   - grpcio=1.27.2=py38hf8bcb03_0
   - gst-plugins-base=1.14.5=h0935bb2_2
   - gstreamer=1.14.5=h36ae1b5_2
   - gxx_impl_linux-64=7.5.0=hdf63c60_6
   - h5py=2.10.0=nompi_py38h513d04c_102
+  - harfbuzz=1.8.8=hffaf4a1_0
   - hdf5=1.10.5=nompi_h3c11f04_1104
-  - icu=64.2=he1b5a44_1
+  - icu=58.2=he6710b0_3
   - idna=2.9=py_1
   - imagecodecs-lite=2019.12.3=py38h8790de6_1
   - imageio=2.8.0=py_0
@@ -91,15 +96,15 @@ dependencies:
   - libsodium=1.0.17=h516909a_0
   - libstdcxx-ng=9.2.0=hdf63c60_2
   - libtiff=4.1.0=h2733197_1
-  - libuuid=2.32.1=h14c3975_1000
+  - libuuid=1.0.3=h1bed415_2
   - libxcb=1.13=h14c3975_1002
   - libxkbcommon=0.10.0=he1b5a44_0
-  - libxml2=2.9.10=hee79883_0
+  - libxml2=2.9.9=hea5a465_1
   - lz4-c=1.9.2=he6710b0_0
   - markdown=3.2.2=py_0
   - markupsafe=1.1.1=py38h1e0a361_1
-  - matplotlib=3.2.1=0
-  - matplotlib-base=3.2.1=py38h2af1d28_0
+  - matplotlib=3.1.3=py38_0
+  - matplotlib-base=3.1.3=py38hef1b27d_0
   - mistune=0.8.4=py38h1e0a361_1001
   - nbconvert=5.6.1=py38h32f6830_1
   - nbformat=5.0.6=py_0
@@ -111,18 +116,20 @@ dependencies:
   - numpy=1.18.5=py38h8854b6b_0
   - oauthlib=3.0.1=py_0
   - olefile=0.46=py_0
-  - openssl=1.1.1g=h516909a_0
+  - openssl=1.1.1g=h7b6447c_0
   - opt_einsum=3.2.1=py_0
   - packaging=20.4=pyh9f0ad1d_0
   - pandas=1.0.3=py38h0573a6f_0
   - pandoc=2.9.2.1=0
   - pandocfilters=1.4.2=py_1
+  - pango=1.42.4=h049681c_0
   - parso=0.7.0=pyh9f0ad1d_0
   - pcre=8.44=he1b5a44_0
   - pexpect=4.8.0=py38h32f6830_1
   - pickleshare=0.7.5=py38h32f6830_1001
   - pillow=7.1.2=py38hb39fc2d_0
   - pip=20.1.1=pyh9f0ad1d_0
+  - pixman=0.38.0=h7b6447c_0
   - prometheus_client=0.7.1=py_0
   - prompt-toolkit=3.0.5=py_0
   - protobuf=3.12.3=py38h950e882_0
@@ -132,11 +139,12 @@ dependencies:
   - pyasn1-modules=0.2.7=py_0
   - pycparser=2.20=py_0
   - pydicom=2.0.0=pyh9f0ad1d_0
+  - pydot=1.4.1=py38_0
   - pygments=2.6.1=py_0
   - pyjwt=1.7.1=py_0
   - pyopenssl=19.1.0=py_1
   - pyparsing=2.4.7=pyh9f0ad1d_0
-  - pyqt=5.12.3=py38ha8c2ead_3
+  - pyqt=5.9.2=py38h05f1152_4
   - pyrsistent=0.16.0=py38h1e0a361_0
   - pysocks=1.7.1=py38h32f6830_1
   - python=3.8.2=he5300dc_7_cpython
@@ -146,7 +154,7 @@ dependencies:
   - pywavelets=1.1.1=py38h8790de6_1
   - pyyaml=5.3.1=py38h1e0a361_0
   - pyzmq=19.0.1=py38ha71036d_0
-  - qt=5.12.5=hd8c4c69_1
+  - qt=5.9.7=h5867ecd_1
   - readline=8.0=hf8c457e_0
   - requests=2.23.0=pyh8c360ce_2
   - requests-oauthlib=1.2.0=py_0
@@ -154,8 +162,10 @@ dependencies:
   - scikit-image=0.17.2=py38hcb8c335_0
   - scikit-learn=0.22.1=py38h22eb022_0
   - scipy=1.4.1=py38h18bccfc_3
+  - seaborn=0.10.1=py_0
   - send2trash=1.5.0=py_0
   - setuptools=46.4.0=py38h32f6830_0
+  - sip=4.19.13=py38he6710b0_0
   - six=1.15.0=pyh9f0ad1d_0
   - sqlite=3.30.1=hcee41ef_0
   - sysroot_linux-64=2.12=h3a0023d_3
@@ -187,9 +197,5 @@ dependencies:
   - zipp=3.1.0=py_0
   - zlib=1.2.11=h516909a_1006
   - zstd=1.4.4=h0b5b093_3
-  - pip:
-    - pyqt5-sip==4.19.18
-    - pyqtchart==5.12
-    - pyqtwebengine==5.12.1
 prefix: /opt/favordata/anaconda3/envs/medical
 
